# alien_invasion

./: .gitignore  README.md  pyproject.toml  res.txt
alien_invasion/: run.py
alien_invasion/assets/math/: cos.csv  sin.csv
alien_invasion/assets/playbacks/: press_play_button_enter_and_quit.json
alien_invasion/code/: alien.py  alien_bullet.py  alien_invasion.py  black_hole.py  boss_health.py  boss_shield.py  bosses.py  bosses_bullets.py  bullet.py  button.py  find_angle.py  game_functions.py  game_stats.py  hud.py  rotation.py  settings.py  ship.py  ship_consumables.py
alien_invasion/game/: alien.py  alien_bullet.py  black_hole.py  boss_bullets.py  boss_health.py  boss_shield.py  bosses.py  bosses_bullets.py  bullet.py  button.py  buttons.py  collections.py  find_angle.py  game_functions.py  game_stats.py  hud.py  images.py  paths.py  pause_menu.py  rotation.py  screen.py  settings.py  ship.py  ship_consumables.py  sprites.py  stages.py  state.py  stats.py  utils.py
alien_invasion/game/gf/: collision.py  common.py  direct_bullet.py  events.py
alien_invasion/src/: alien.py  alien_bullet.py  black_hole.py  boss_health.py  boss_shield.py  bosses.py  bosses_bullets.py  bullet.py  button.py  find_angle.py  game_functions.py  game_stats.py  hud.py  images.py  rotation.py  run.py  settings.py  ship.py  ship_consumables.py
alien_invasion/tests/: conftest.py  test_playback.py
