[project]
name = "alien-invasion"
version = "0.1.0"
description = "alien invation game"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "pygame-ce>=2.5.7",
]

[dependency-groups]
auto = [
    "tox>=4.35.0",
    "tox-uv>=1.29.0",
]
build = [
    "nuitka>=2.8.4",
]
lint = [
    "ruff==0.15.6",
]
prod = [
    "pygame-ce>=2.5.7",
]
test = [
    "pytest>=9.0.2",
]
type = [
    "mypy==1.19.1",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint.isort]
known-first-party = ["run", "game"]

[tool.ruff.lint]
preview = true
select = [
    "ALL"
]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D203",
    "D212",
    "D213",
    "D417",
    "C901",      # too-complex
    "CPY001",
    "FIX002",
    "PLR0912",   # too-many-branches
    "PLR0913",   # too-many-arguments
    "PLR0915",   # too-many-statements
    "PLR2004",   # magic-values (fix)
    "TD002",
    "TD003",
]

[tool.mypy]
disallow_untyped_defs = true
mypy_path = "./alien_invasion"
exclude = [
    ".*\\.onefile-build.*",
    ".*\\.build.*",
]

[tool.pytest]
pythonpath = ["alien_invasion"]

[tool.tox]
requires = [
    "tox>=4.19",
    "tox-uv>=1.29.0"
]
env_list = ["3.14", "lint", "type", "test"]

[tool.tox.env.lint]
runner = "uv-venv-lock-runner"
skip_install = true
description = "run and ruff"
dependency_groups = ["lint"]
commands = [
    ["ruff", "check", "--select", "I", "--fix"],
    ["ruff", "check"]
]

[tool.tox.env.type]
runner = "uv-venv-lock-runner"
skip_install = true
description = "run mypy"
dependency_groups = ["test", "type"]
commands = [["mypy", ".", "--explicit-package-bases"]]

[tool.tox.env.test]
runner = "uv-venv-lock-runner"
skip_install = true
description = "run tests"
dependency_groups = ["prod", "test"]
commands = [["pytest", "alien_invasion/tests"]]

[tool.ruff.lint.pylint]
max-positional-args = 10
