[project]
name = "alien-invasion"
version = "0.1.0"
description = "alien invation game"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "pygame-ce>=2.5.7",
]

[dependency-groups]
auto = [
    "tox>=4.35.0",
    "tox-uv>=1.29.0",
]
build = [
    "nuitka>=2.8.4",
]
lint = [
    "ruff==0.15.9",
]
prod = [
    "pygame-ce>=2.5.7",
]
test = [
    "pytest>=9.0.2",
]
type = [
    "mypy==1.20.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint.isort]
known-first-party = ["run", "game"]

[tool.ruff.lint]
preview = true
select = [
    "ALL"
]
ignore = [
    "D100",      # undocumented-public-module
    "D101",      # undocumented-public-class
    "D102",      # undocumented-public-method
    "D103",      # undocumented-public-function
    "D104",      # undocumented-public-package
    "D105",      # undocumented-magic-method
    "D106",      # undocumented-public-nested-class
    "D107",      # undocumented-public-init
    "D212",      # multi-line-summary-first-line
    "D213",      # multi-line-summary-second-line
    "D417",      # undocumented-param
    "C901",      # complex-structure
    "CPY001",    # missing-copyright-notice
    "FIX002",    # line-contains-todo
    "PLR0912",   # too-many-branches
    "PLR0913",   # too-many-arguments
    "PLR0915",   # too-many-statements
    "PLR2004",   # magic-value-comparison
    "TD002",     # missing-todo-author
    "TD003",     # missing-todo-link
]

[tool.mypy]
disallow_untyped_defs = true
mypy_path = "./alien_invasion"
exclude = [
    ".*\\.onefile-build.*",
    ".*\\.build.*",
]

[tool.pytest]
pythonpath = ["alien_invasion"]

[tool.tox]
requires = [
    "tox>=4.19",
    "tox-uv>=1.29.0"
]
env_list = ["3.14", "lint", "type", "test"]

[tool.tox.env.lint]
runner = "uv-venv-lock-runner"
skip_install = true
description = "run and ruff"
dependency_groups = ["lint"]
commands = [
    ["ruff", "check", "--select", "I", "--fix"],
    ["ruff", "check"]
]

[tool.tox.env.type]
runner = "uv-venv-lock-runner"
skip_install = true
description = "run mypy"
dependency_groups = ["test", "type"]
commands = [["mypy", ".", "--explicit-package-bases"]]

[tool.tox.env.test]
runner = "uv-venv-lock-runner"
skip_install = true
description = "run tests"
dependency_groups = ["prod", "test"]
commands = [["pytest", "alien_invasion/tests"]]

[tool.ruff.lint.pylint]
max-positional-args = 10
