[project]
name = "alien-invasion"
version = "0.1.0"
description = "alien invation game"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "pygame-ce>=2.5.7",
]

[dependency-groups]
auto = [
    "tox>=4.35.0",
    "tox-uv>=1.29.0",
]
build = [
    "nuitka>=2.8.4",
]
lint = [
    "ruff==0.15.22",
]
prod = [
    "pygame-ce>=2.5.7",
]
test = [
    "pytest>=9.0.2",
]
type = [
    "mypy==2.1.0",
]

[tool.ruff]
line-length = 140

[tool.ruff.lint.isort]
known-first-party = ["run", "game"]

[tool.ruff.lint]
preview = true
select = [
    "ALL"
]
ignore = [
    "undocumented-public-module",
    "undocumented-public-class",
    "undocumented-public-method",
    "undocumented-public-function",
    "undocumented-public-package",
    "undocumented-magic-method",
    "undocumented-public-nested-class",
    "undocumented-public-init",
    "multi-line-summary-first-line",
    "multi-line-summary-second-line",
    "undocumented-param",
    "complex-structure",
    "missing-copyright-notice",
    "line-contains-todo",
    "too-many-branches",
    "too-many-arguments",
    "too-many-statements",
    "magic-value-comparison",
    "missing-todo-author",
    "missing-todo-link",
]

[tool.mypy]
disallow_untyped_defs = true
mypy_path = "./alien_invasion"
exclude = [
    ".*\\.onefile-build.*",
    ".*\\.build.*",
]

[tool.pytest]
pythonpath = ["alien_invasion"]

[tool.tox]
requires = [
    "tox>=4.19",
    "tox-uv>=1.29.0"
]
env_list = ["3.14", "lint", "type", "test"]

[tool.tox.env.lint]
runner = "uv-venv-lock-runner"
skip_install = true
description = "run and ruff"
dependency_groups = ["lint"]
commands = [
    ["ruff", "check", "--select", "I", "--fix"],
    ["ruff", "check"]
]

[tool.tox.env.type]
runner = "uv-venv-lock-runner"
skip_install = true
description = "run mypy"
dependency_groups = ["test", "type"]
commands = [["mypy", ".", "--explicit-package-bases"]]

[tool.tox.env.test]
runner = "uv-venv-lock-runner"
skip_install = true
description = "run tests"
dependency_groups = ["prod", "test"]
commands = [["pytest", "alien_invasion/tests"]]

[tool.ruff.lint.pylint]
max-positional-args = 10
